deploy: aafa56074556363b54352134885da9d654b54eef

--- a/index.html
+++ b/index.html
@@ -553,6 +553,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://youtu.be/hEgZl79EPlQ" target="_blank" rel="noopener">How to install Apache Tomcat?</a></p>
 </li>
 <li>
+<p><a href="https://youtu.be/RXK8xhtnWR4" target="_blank" rel="noopener">How to install PostgreSQL?</a></p>
+</li>
+<li>
 <p><a href="https://youtu.be/j4oDBGNWtys" target="_blank" rel="noopener">How to create an IAM user to AWS?</a></p>
 </li>
 <li>
@@ -1919,7 +1922,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-13 04:44:16 UTC
+Last updated 2022-01-13 08:50:53 UTC
 </div>
 </div>
 </body>
