deploy: 53fd00b89756c4c4d9079cb6b60692e2537fd0f4

--- a/links.html
+++ b/links.html
@@ -568,6 +568,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/6ZjaO8hGiQA" target="_blank" rel="noopener">Lesson 12: Java Persistence API (JPA)</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/ToLGj3iEPcw" target="_blank" rel="noopener">Lesson 13: Intro to Hibernate</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -591,7 +594,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-13 08:50:53 UTC
+Last updated 2022-01-13 10:16:53 UTC
 </div>
 </div>
 </body>
