deploy: c10d006098b50a2fbd7405467eed6135c610db29

--- a/index.html
+++ b/index.html
@@ -564,6 +564,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/wJi5i_Ty5pQ" target="_blank" rel="noopener">How to set up Java environment an EC2 instance to AWS?</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/KAL289iZfgk">How create an RDS instance to AWS?</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -1925,7 +1928,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-13 10:16:53 UTC
+Last updated 2022-01-13 15:03:33 UTC
 </div>
 </div>
 </body>
