deploy: a35568abe220df4a469d9092baa48a891e1adf2c

--- a/project/index.html
+++ b/project/index.html
@@ -781,7 +781,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect2">
 <h3 id="_example_4">Example</h3>
 <div class="paragraph">
-<p><a href="https://github.com/JD2-86/interview-helper" target="_blank" rel="noopener">Interview Helper</a></p>
+<p><a href="http://ec2-3-71-2-193.eu-central-1.compute.amazonaws.com:8080/ih/" target="_blank" rel="noopener">Interview Helper as web-application</a>
+<a href="https://github.com/JD2-86/interview-helper" target="_blank" rel="noopener">Interview Helper as project</a></p>
 </div>
 </div>
 </div>
@@ -1185,7 +1186,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-14 05:32:04 UTC
+Last updated 2022-01-14 05:39:15 UTC
 </div>
 </div>
 </body>
