--- a/project/stage-04.html
+++ b/project/stage-04.html
@@ -491,16 +491,22 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect1">
 <h2 id="_example">Example</h2>
 <div class="sectionbody">
-<div class="paragraph">
-<p><a href="http://ec2-3-71-2-193.eu-central-1.compute.amazonaws.com:8080/ih/" target="_blank" rel="noopener">Interview Helper as web-application</a>
-<a href="https://github.com/JD2-86/interview-helper" target="_blank" rel="noopener">Interview Helper as project</a></p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="http://ec2-3-71-2-193.eu-central-1.compute.amazonaws.com:8080/ih/" target="_blank" rel="noopener">Interview Helper as web-application</a></p>
+</li>
+<li>
+<p><a href="https://github.com/JD2-86/interview-helper" target="_blank" rel="noopener">Interview Helper as project</a></p>
+</li>
+</ul>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-14 05:39:15 UTC
+Last updated 2022-01-14 05:40:48 UTC
 </div>
 </div>
 </body>
