deploy: 0d1ba8ee70e8718997505b26bb5df3252d86cb06

--- a/index.html
+++ b/index.html
@@ -1573,6 +1573,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 </ul>
 </div>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<div class="title">Warning</div>
+</td>
+<td class="content">
+Разработку нового функционала можно считать завершенной, если он доступен для конечных пользователей, т.е. недостаточно разработать source code и отправить его в repository, необходимо развернуть приложение на максимально доступном окружении. Для собственных проектов — это <strong>PROD</strong>, для проектов на outsource - это скорее всего <strong>DEV</strong> (или другие, в зависимости от процесса).
+</td>
+</tr>
+</table>
+</div>
 </div>
 <div class="sect3">
 <h4 id="_example_4">3.5.2. Example</h4>
@@ -1987,7 +1999,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-14 05:40:48 UTC
+Last updated 2022-01-15 03:36:28 UTC
 </div>
 </div>
 </body>
