deploy: d356adf6e7c738fcc88359681d60499b605e4d73

--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_11_data_access_object_dao">2.11. Lesson 11: Data Access Object (DAO)</a></li>
 <li><a href="#_lesson_12_intro_to_jpa">2.12. Lesson 12: Intro to JPA</a></li>
 <li><a href="#_lesson_13_intro_to_hibernate">2.13. Lesson 13: Intro to Hibernate</a></li>
+<li><a href="#_lesson_14_basic_mapping">2.14. Lesson 14: Basic Mapping</a></li>
 </ul>
 </li>
 <li><a href="#_project">3. Project</a>
@@ -1292,6 +1293,29 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_14_basic_mapping">2.14. Lesson 14: Basic Mapping</h3>
+<div class="sect3">
+<h4 id="_practice_14">2.14.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/06-mapping-basic/src/main/resources/mapping-basic.adoc">Basic Mapping</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_14">2.14.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -1999,7 +2023,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-15 03:36:28 UTC
+Last updated 2022-01-17 04:52:59 UTC
 </div>
 </div>
 </body>
