--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1126,10 +1126,35 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_14_basic_mapping">Lesson 14: Basic Mapping</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_14">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/06-mapping-basic/src/main/resources/mapping-basic.adoc">Basic Mapping</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_14">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-15 03:36:28 UTC
+Last updated 2022-01-17 04:52:59 UTC
 </div>
 </div>
 </body>
